src/test/ui/parser/issue-81097.stderr
error: expected one of `;` or `]`, found `,`
  --> $DIR/issue-81097.rs:2:15
   |
LL |     drop::<[(), 0]>([]);
   |               ^ expected one of `;` or `]`

error: aborting due to previous error

